# Computer-Graphics

./: CMakeLists.txt  README.md
assets/models/: scene.json  sceneK.json
shaders/: Lambert-Blinn.frag  Lambert-Blinn.frag.spv  Mesh.frag  Mesh.frag.spv  Mesh.vert  Mesh.vert.spv  Overlay.frag  Overlay.frag.spv  Overlay.vert  Overlay.vert.spv  ShaderFrag.frag  ShaderFrag.spv  ShaderVert.spv  ShaderVert.vert  Text.frag.spv  Text.vert  Text.vert.spv
src/: Libs.cpp  main.cpp
